# cbsw-uuid

./: .gitmodules  CMakeLists.txt
include/: cbsw-uuid  uuid.hpp
test/: CMakeLists.txt  main.cpp  pch.hpp  test.hpp  uuid.unit.cpp
